<?xml version="1.0"?>
<package format="3">
  <name>res25_controller4</name>
  <version>0.0.1</version>
  <description>RescueRobot2025 Robot Main Control Program</description>
  <maintainer email="kinkiknights@gmail.com">hirai</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kk_driver_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

